testing updating deps

--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
-    "@jupyterlab/application": "~3.0.0",
-    "@jupyterlab/apputils": "~3.0.0",
-    "@jupyterlab/cells": "~3.0.0",
-    "@jupyterlab/codemirror": "~3.0.0",
+    "@jupyterlab/application": ">3.0.0",
+    "@jupyterlab/apputils": ">3.0.0",
+    "@jupyterlab/cells": ">3.0.0",
+    "@jupyterlab/codemirror": ">3.0.0",
     "@jupyterlab/coreutils": "^5.0.0",
-    "@jupyterlab/docmanager": "~3.0.0",
-    "@jupyterlab/docregistry": "~3.0.0",
-    "@jupyterlab/nbformat": "~3.0.0",
-    "@jupyterlab/notebook": "~3.0.0",
+    "@jupyterlab/docmanager": ">3.0.0",
+    "@jupyterlab/docregistry": ">3.0.0",
+    "@jupyterlab/nbformat": ">3.0.0",
+    "@jupyterlab/notebook": ">3.0.0",
     "@jupyterlab/observables": "^4.0.1",
-    "@jupyterlab/outputarea": "~3.0.0",
-    "@jupyterlab/rendermime": "~3.0.0",
+    "@jupyterlab/outputarea": ">3.0.0",
+    "@jupyterlab/rendermime": ">3.0.0",
     "@jupyterlab/services": "^6.0.2",
     "@lumino/coreutils": "^1.5.3",
     "@lumino/messaging": "^1.4.3",
